# autotools-quickstart

./: .gitignore  README.md  configure.ac
src/: Makefile.am  main.c
